@@ -4,13 +4,13 @@
 [editor_tool_hint]
     # wmllint: local spelling left/right
     id="editor-tool-paint"
-    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only."
+    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only. Ctrl+click to sample terrain under cursor."
 [/editor_tool_hint]
 
 [editor_tool_hint]
     # wmllint: local spelling fore-/background
     id="editor-tool-fill"
-    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only."
+    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only. Ctrl+click to sample terrain under cursor."
 [/editor_tool_hint]
 
 [editor_tool_hint]
